syntax = "proto3";
import "google/protobuf/empty.proto";

package author.v1;

service AuthorService {
  rpc GetById (GetByIdResponse) returns (GetByIdResponse) {}
  rpc GetList (google.protobuf.Empty) returns (GetListResponse) {}
  rpc CreateAuthor (CreateAuthorRequest) returns (CreateAuthorResponse) {}
  rpc UpdateAuthor (UpdateAuthorRequest) returns (UpdateAuthorResponse) {}
  rpc DeleteAuthor (DeleteAuthorRequest) returns (google.protobuf.Empty) {}
}
// GetById
message GetByIdResponse {
  Author author = 1;
}

message GetByIdRequest {
  string _id = 1;
}

// GetList
message GetListResponse {
  repeated Author authors = 1;
}

// CreateAuthor
message CreateAuthorRequest {
  string name = 1;
}

message CreateAuthorResponse {
  Author author = 1;
}

// UpdateAuthor
message UpdateAuthorRequest {
  string _id = 1;
  Author author = 2;
}

message UpdateAuthorResponse {
  Author author = 1;
}

// DeleteAuthor 
message DeleteAuthorRequest {
  string _id = 1;
}

message Author {
  string _id = 1;
  string name = 2;
  int32 age = 3;
}