export * from './lib/codegen/author/v1/Author';
export * from './lib/codegen/author/v1/AuthorService';
export * from './lib/codegen/author/v1/CreateAuthorRequest';
export * from './lib/codegen/author/v1/CreateAuthorResponse';
export * from './lib/codegen/author/v1/DeleteAuthorRequest';
export * from './lib/codegen/author/v1/GetByIdRequest';
export * from './lib/codegen/author/v1/GetByIdResponse';
export * from './lib/codegen/author/v1/GetListResponse';
export * from './lib/codegen/author/v1/UpdateAuthorRequest';
export * from './lib/codegen/author/v1/UpdateAuthorResponse';
export * from './lib/codegen/google/protobuf/Empty';
export * from './lib/codegen/author.v1';
